k8s/scv/ingress/ingress-test/svc-dome.yaml

apiVersion: v1 
kind: Service 
metadata: 
  name: nginx-svc 
spec: 
  ports: 
    - port: 80 
      targetPort: 80 
      protocol: TCP 
  selector: 
    name: nginx #标签为匹配
