k8s/scv/ingress/ingress-test/ingress-dome.yaml
apiVersion: extensions/v1beta1 
kind: Ingress 
metadata: 
  name: nginx-test 
spec: 
  rules: 
    - host: www1.atguigu.com 
      http: 
        paths: 
        - path: / 
          backend: 
            serviceName: nginx-svc 
            servicePort: 80
